--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div id="ng-Gift">
     <div class="hex-row" *ngFor="let row of combinedEx; let rowIndex = index">
       <div class="hex {{ hex[1] }}" *ngFor="let hex of row; let hexIndex = index">
-        <div [ngClass]="'token'">{{ hex[0] }}</div>
+        <div [ngClass]="{'token':true,'red':(hex[0] == 6 || hex[0] == 8)}">{{ hex[0] }}</div>
       </div>
     </div>
 </div>
