--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,21 @@
 
+<div>
+    <h1>GOT Catan Randomizer</h1>
+    <form>
+        <div>
+            <h4>Players</h4>
+
+        </div>
+        <div>
+            <h4>Randomize</h4>
+            <mat-checkbox>Resources</mat-checkbox>
+            <mat-checkbox>Tokens</mat-checkbox>
+        </div>
+        <div>
+            <button mat-flat-button color="primary">Randomize!</button>
+        </div>
+    </form>
+</div>
 
 <div id="ng-Gift">
     <div class="hex-row" *ngFor="let row of combinedEx; let rowIndex = index">
