--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 /* You can add global styles to this file, and also import other style files */
 body {
     font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    padding: 100px 0 50px 100px;
+    padding: 25px;
     font-size: 13px;
 }
