--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,24 @@
 
 <div>
     <h1>GOT Catan Randomizer</h1>
-    <form>
-        <div>
-            <h4>Players</h4>
+    <div>
+        <h4>Players</h4>
 
-        </div>
-        <div>
-            <h4>Randomize</h4>
-            <mat-checkbox>Resources</mat-checkbox>
-            <mat-checkbox>Tokens</mat-checkbox>
-        </div>
-        <div>
-            <button mat-flat-button color="primary">Randomize!</button>
-        </div>
-    </form>
+    </div>
+    <div>
+        <h4>Randomize</h4>
+        <mat-checkbox>Resources</mat-checkbox>
+        <mat-checkbox disabled="disabled">Tokens</mat-checkbox>
+    </div>
+    <div>
+        <button mat-flat-button color="primary" (click)="randomize()">Randomize!</button>
+        <button mat-flat-button color="accent">Default</button>
+    </div>
 </div>
 
 <div id="ng-Gift">
-    <div class="hex-row" *ngFor="let row of combinedEx; let rowIndex = index">
-      <div class="hex {{ hex[1] }}" *ngFor="let hex of row; let hexIndex = index">
+    <div class="hex-row" *ngFor="let row of defaultHexes">
+      <div class="hex {{ hex[1] }}" *ngFor="let hex of row">
         <div [ngClass]="{'token':true,'red':(hex[0] == 6 || hex[0] == 8)}">{{ hex[0] }}</div>
       </div>
     </div>
